fixed nav going behind image bug (#1)

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -11,6 +11,7 @@ nav {
     gap: 0.8rem;
     border-radius: 3rem;
     backdrop-filter: blur(15px);
+    z-index: 10;
 }
 
 nav a {
@@ -25,6 +26,7 @@ nav a {
 nav a:hover {
     background: rgba(0, 0, 0, 0.3);
 }
+
 nav a.active {
     background: var(--color-bg);
     color: var(--color-white);
